Change user password and refactoring
